--- a/src/components/presentation/presentation.css
+++ b/src/components/presentation/presentation.css
@@ -35,8 +35,7 @@ hr{
 
  .iconsL:hover, .icons:hover{
     opacity: 0.5;
-    transition: 0.3s;
-    transition-timing-function: ease-in;
+    transition: all .2s ease-in-out;
 } 
 
 .auto {
