--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -62,4 +62,13 @@
 .pablotz{
     margin-left: 45%;
 }
+
+@media screen and (max-width: 400px) {
+  .pablotz{
+    margin-left: 33%;
+}
+  .button {
+    margin-left: 24%;
+  }
+}
   
